--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     
-    <header></header>
+    <header>
+    <div class="head">
+        <img class="logo" src="img/logo.svg" alt="logo">
+    </div>    
+    </header>
 
     <main></main>
 
