Fix the head and logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
     </div>    
     </header>
 
-    <main></main>
+    <main>
+        <span class="main-title">
+            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+        </span>
+
+    <span class="subtitle">
+    Scritto da <a href="#">The Booleaner</a><br>
+    il 10/10/2020
+    </span>
+<div class="photo-tim">
+    <img src="img/tim-1.jpg" alt="Foto Tim 1">
+    <img src="img/tim-2.jpg" alt="Foto Tim 2">
+</div>
+    </main>
 
 </body>
 </html>
