Add main text and list

--- a/index.html
+++ b/index.html
@@ -24,9 +24,30 @@
     Scritto da <a href="#">The Booleaner</a><br>
     il 10/10/2020
     </span>
+    
 <div class="photo-tim">
     <img src="img/tim-1.jpg" alt="Foto Tim 1">
     <img src="img/tim-2.jpg" alt="Foto Tim 2">
+</div>
+
+<span>
+    1st Photo: John S. and James L. Khinight Foundation, by Scott Henrichsen
+    <br>
+    2st Photo: Wikimedia, by Paul Clarke
+</span>
+
+<div class="main-text">
+<span>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    Cum ipsam sapiente soluta voluptatum, in neque a facere qui!
+    Nostrum, odio ex, corporis minus pariatur possimus reprehenderit, magni illo vero dicta <span class="highlighted">nemo earum molestiae ipsum maiores facilis odit eius ducimus.</span> 
+    Iusto quo quibusdam voluptas, praesentium rem atque in aspernatur delectus error minus, repellat, expedita necessitatibus. Eligendi distinctio delectus voluptas maiores, quas eius quos illum, accusamus pariatur, vero nihil dolores. Veritatis cum nesciunt quos, repellendus odio expedita quisquam numquam autem error ipsam harum reiciendis deserunt eius unde minus, sequi nostrum eaque sunt quas sit enim. Aliquid cupiditate placeat, magnam ut quod veniam!
+    <ul>
+        <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet adipisci rerum distinctio numquam aliquam quam porro voluptatibus nam, architecto.</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, pariatur?</li>
+        <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet adipisci rerum distinctio numquam aliquam quam porro voluptatibus nam, architecto.</li>
+    </ul>
+</span>
 </div>
     </main>
 
