Add color color to the table

--- a/index.html
+++ b/index.html
@@ -50,38 +50,33 @@
 </span>
 </div>
 
-<span class="main-table">
-    <table>
-        <thead style="head-table">
+    <table class="d">
+        <thead class="a"">
             <tr>
                 <th>Lorem ipsum dolor</th>
                 <th>Lorem ipsum dolor</th>
                 <th>Lorem ipsum dolor</th>
             </tr>
         </thead>
-        <tr>
-            <td>Lorem ipsum dolor</td>
-            <td>Lorem ipsum dolor</td>
-            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet adipisci rerum distinctio numquam aliquam quam porro voluptatibus nam, architecto</td>
-        </tr>
-        <tr>
-            <td>Lorem ipsum dolor</td>
-            <td>Lorem ipsum dolor</td>
-            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet adipisci rerum distinctio numquam aliquam quam porro voluptatibus nam, architecto</td>
-        </tr>
-        <tr>
-            <td>Lorem ipsum dolor</td>
-            <td>Lorem ipsum dolor</td>
-            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet adipisci rerum distinctio numquam aliquam quam porro voluptatibus nam, architecto</td>
-        </tr>
-        <tr>
-            <td>Lorem ipsum dolor</td>
-            <td>Lorem ipsum dolor</td>
-            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet adipisci rerum distinctio numquam aliquam quam porro voluptatibus nam, architecto</td>
-        </tr>
+        <tbody>
+            <tr class="b">
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet adipisci rerum distinctio numquam aliquam quam porro voluptatibus nam, architecto</td>
+            </tr>
+            <tr>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet adipisci rerum distinctio numquam aliquam quam porro voluptatibus nam, architecto</td>
+            </tr>
+            <tr>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet adipisci rerum distinctio numquam aliquam quam porro voluptatibus nam, architecto</td>
+            </tr>
+        </tbody>
     </table>
     
-</span>
 <br>
 
 <span class="bottom-text">
